index.rst rouing.yml homePage

--- a/Resources/views/Project/index.html.twig
+++ b/Resources/views/Project/index.html.twig
@@ -7,7 +7,7 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Nom</th>
+                <th>Name</th>
                 <th>Estimatedtime</th>
                 <th>Createdat</th>
                 <th>Updatedat</th>
