--- a/Resources/views/Timesheet/show.html.twig
+++ b/Resources/views/Timesheet/show.html.twig
@@ -14,6 +14,10 @@
                 <td>{{ entity.date|date('Y-m-d H:i:s') }}</td>
             </tr>
             <tr>
+                <th>Project</th>
+                <td>{{ entity.project }}</td>
+            </tr>
+            <tr>
                 <th>Timespent</th>
                 <td>{{ entity.timeSpent|date('Y-m-d H:i:s') }}</td>
             </tr>
